// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ModelTransformer with SQL data sources: should accept multiple connection uris as input 1`] = `
{
  "Statement": [
    {
      "Action": [
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:PutLogEvents",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:logs:*:*:*",
    },
    {
      "Action": [
        "ssm:GetParameter",
        "ssm:GetParameters",
      ],
      "Effect": "Allow",
      "Resource": [
        "arn:aws:ssm:*:*:parameter/test/connectionUri/1",
        "arn:aws:ssm:*:*:parameter/test/connectionUri/2",
      ],
    },
  ],
  "Version": "2012-10-17",
}
`;

exports[`ModelTransformer with SQL data sources: should assign SSM permissions 1`] = `
{
  "Statement": [
    {
      "Action": [
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:PutLogEvents",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:logs:*:*:*",
    },
    {
      "Action": [
        "ssm:GetParameter",
        "ssm:GetParameters",
      ],
      "Effect": "Allow",
      "Resource": [
        "arn:aws:ssm:*:*:parameter/test/username",
        "arn:aws:ssm:*:*:parameter/test/password",
        "arn:aws:ssm:*:*:parameter/test/hostname",
        "arn:aws:ssm:*:*:parameter/test/databaseName",
        "arn:aws:ssm:*:*:parameter/test/port",
      ],
    },
  ],
  "Version": "2012-10-17",
}
`;

exports[`ModelTransformer with SQL data sources: should assign secrets manager permissions 1`] = `
{
  "Statement": [
    {
      "Action": [
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:PutLogEvents",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:logs:*:*:*",
    },
    {
      "Action": "secretsmanager:GetSecretValue",
      "Effect": "Allow",
      "Resource": "myfakesecretarn",
    },
  ],
  "Version": "2012-10-17",
}
`;

exports[`ModelTransformer with SQL data sources: should assign secrets manager permissions with custom encryption key 1`] = `
{
  "Statement": [
    {
      "Action": [
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:PutLogEvents",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:logs:*:*:*",
    },
    {
      "Action": "secretsmanager:GetSecretValue",
      "Effect": "Allow",
      "Resource": "myfakesecretarn",
    },
    {
      "Action": "kms:Decrypt",
      "Effect": "Allow",
      "Resource": "myfakekeyarn",
    },
  ],
  "Version": "2012-10-17",
}
`;

exports[`ModelTransformer with SQL data sources: should process connection uri as input 1`] = `
{
  "Statement": [
    {
      "Action": [
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:PutLogEvents",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:logs:*:*:*",
    },
    {
      "Action": [
        "ssm:GetParameter",
        "ssm:GetParameters",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:ssm:*:*:parameter/test/connectionUri",
    },
  ],
  "Version": "2012-10-17",
}
`;

exports[`ModelTransformer with SQL data sources: should process multiple custom ssl certificates as input 1`] = `
{
  "Statement": [
    {
      "Action": [
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:PutLogEvents",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:logs:*:*:*",
    },
    {
      "Action": [
        "ssm:GetParameter",
        "ssm:GetParameters",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:ssm:*:*:parameter/test/connectionUri",
    },
    {
      "Action": [
        "ssm:GetParameter",
        "ssm:GetParameters",
      ],
      "Effect": "Allow",
      "Resource": [
        "arn:aws:ssm:*:*:parameter/test/sslCert/1",
        "arn:aws:ssm:*:*:parameter/test/sslCert/2",
      ],
    },
  ],
  "Version": "2012-10-17",
}
`;

exports[`ModelTransformer with SQL data sources: should process single custom ssl certificate as input 1`] = `
{
  "Statement": [
    {
      "Action": [
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:PutLogEvents",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:logs:*:*:*",
    },
    {
      "Action": [
        "ssm:GetParameter",
        "ssm:GetParameters",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:ssm:*:*:parameter/test/connectionUri",
    },
    {
      "Action": [
        "ssm:GetParameter",
        "ssm:GetParameters",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:ssm:*:*:parameter/test/sslCert",
    },
  ],
  "Version": "2012-10-17",
}
`;
